--- a/react-peakystore/package.json
+++ b/react-peakystore/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
