--- a/react-peakystore/package.json
+++ b/react-peakystore/package.json
@@ -4,24 +4,26 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
-    "@emotion/styled": "^11.10.5",
     "@mui/styled-engine-sc": "^5.10.6",
     "@mui/x-data-grid": "^5.17.12",
+    "@mui/x-date-pickers": "^5.0.12",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.8.4",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
